// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatPanel noise filtering + thinking row spacing > matches visual regression snapshot for thinking row alignment classes 1`] = `
<div
  class="my-0.5"
  data-testid="thinking-row"
>
  <button
    class="flex items-center gap-2 rounded-xl px-0 py-1.5 hover:bg-[#1a1a1a] transition-colors text-left"
    data-testid="thinking-row-trigger"
    type="button"
  >
    <span
      class="thinking-shimmer rounded-md bg-[#1e1e2e] px-2.5 py-0.5 text-xs font-semibold text-violet-300 border border-violet-500/20"
    >
      Thinking
    </span>
    <svg
      class="h-3 w-3 text-zinc-600 transition-transform duration-200 "
      fill="none"
      stroke="currentColor"
      stroke-width="2"
      viewBox="0 0 24 24"
    >
      <path
        d="m9 18 6-6-6-6"
      />
    </svg>
  </button>
</div>
`;

exports[`ChatPanel noise filtering + thinking row spacing > matches visual regression snapshot for thinking row alignment classes 2`] = `
<button
  class="flex items-center gap-2 rounded-xl px-0 py-1.5 hover:bg-[#1a1a1a] transition-colors text-left"
  data-testid="thinking-row-trigger"
  type="button"
>
  <span
    class="thinking-shimmer rounded-md bg-[#1e1e2e] px-2.5 py-0.5 text-xs font-semibold text-violet-300 border border-violet-500/20"
  >
    Thinking
  </span>
  <svg
    class="h-3 w-3 text-zinc-600 transition-transform duration-200 "
    fill="none"
    stroke="currentColor"
    stroke-width="2"
    viewBox="0 0 24 24"
  >
    <path
      d="m9 18 6-6-6-6"
    />
  </svg>
</button>
`;
